--- a/NCC-Sign/optimized_implementation/AVX2/Makefile
+++ b/NCC-Sign/optimized_implementation/AVX2/Makefile
@@ -4,7 +4,7 @@ CFLAGS += -Wall -Wextra -Wpedantic -Wmissing-prototypes -Wredundant-decls \
   -mavx2 -mpopcnt -maes -mbmi2 -O3 -z noexecstack 
 NISTFLAGS += -Wno-unused-result -mavx2 -mpopcnt -maes -mbmi2 \
   -march=native -mtune=native -O3 -z noexecstack
-SOURCES = sign.c poly.c packing.c reduce.c rounding.c aes.c consts.c ntt1_asm.S ntt3_asm.S ntt5_asm.S poly_base_mul1_asm.S poly_base_mul3_asm.S poly_base_mul5_asm.S invntt1_asm.S invntt3_asm.S invntt5_asm.S
+SOURCES = sign.c poly.c packing.c reduce.c rounding.c aes.c consts.c ntt1_asm.S ntt3_asm.S ntt5_asm.S ntt5prime_asm.S poly_base_mul1_asm.S poly_base_mul3_asm.S poly_base_mul5_asm.S  poly_base_mul5prime_asm.S invntt1_asm.S invntt3_asm.S invntt5_asm.S invntt5prime_asm.S
 HEADERS = config.h params.h api.h sign.h packing.h poly.h \
   reduce.h rounding.h symmetric.h randombytes.h aes.h consts.h align.h
 KECCAK_SOURCES = $(SOURCES) fips202.c symmetric-shake.c
@@ -12,10 +12,8 @@ KECCAK_HEADERS = $(HEADERS) fips202.h
 AES_SOURCES = $(SOURCES) fips202.c symmetric-aes.c
 AES_HEADERS = $(HEADERS) fips202.h
 
-TEST_SOURCES = sign.c poly.c packing.c reduce.c rounding.c aes.c
-TEST_KECCAK_SOURCES = $(TEST_SOURCES) fips202.c symmetric-shake.c
-
 .PHONY: all speed shared clean
+
 
 all: \
   fixtest \
@@ -24,63 +22,77 @@ all: \
   PQCgenKAT_sign1 \
   PQCgenKAT_sign3 \
   PQCgenKAT_sign5 \
+  PQCgenKAT_sign5prime 
 
 fixtest: \
   test/test_NIMS1_fix \
   test/test_NIMS3_fix \
-  test/test_NIMS5_fix
+  test/test_NIMS5_fix \
+  test/test_NIMS5prime_fix 
 
 packing: \
   test/test_packing1 \
   test/test_packing3 \
-  test/test_packing5
+  test/test_packing5 \
+  test/test_packing5prime
 
 test: \
   test/test_NIMS1 \
   test/test_NIMS3 \
   test/test_NIMS5 \
+  test/test_NIMS5prime \
   test/test_NIMS1aes \
   test/test_NIMS3aes \
-  test/test_NIMS5aes
+  test/test_NIMS5aes \
+  test/test_NIMS5primeaes
 
 speed: \
   test/test_speed1 \
   test/test_speed3 \
   test/test_speed5 \
+  test/test_speed5prime \
   test/test_speed1aes \
   test/test_speed3aes \
-  test/test_speed5aes
+  test/test_speed5aes \
+  test/test_speed5primeaes
 
 timecop: \
   test/test_timecop1 \
   test/test_timecop3 \
-  test/test_timecop5
+  test/test_timecop5 \
+  test/test_timecop5prime
 
 shared: \
   libpqcrystals_NIMS1_ref.so \
   libpqcrystals_NIMS3_ref.so \
   libpqcrystals_NIMS5_ref.so \
+  libpqcrystals_NIMS5prime_ref.so \
   libpqcrystals_NIMS1aes_ref.so \
   libpqcrystals_NIMS3aes_ref.so \
   libpqcrystals_NIMS5aes_ref.so \
+  libpqcrystals_NIMS5primeaes_ref.so \
   libpqcrystals_fips202_ref.so \
   libpqcrystals_aes256ctr_ref.so
 
-
-test/test_NIMS1: test/test_NIMS.c randombytes.c $(ORIGINAL_POLY) $(KECCAK_SOURCES) \
+test/test_NIMS1: test/test_NIMS.c randombytes.c $(KECCAK_SOURCES) \
   $(KECCAK_HEADERS) 
 	$(CC) $(CFLAGS) -DNIMS_TRI_NTT_MODE=1 \
-	  -o $@ $< randombytes.c $(ORIGINAL_POLY) $(KECCAK_SOURCES) 
+	  -o $@ $< randombytes.c $(KECCAK_SOURCES) 
 
-test/test_NIMS3: test/test_NIMS.c randombytes.c $(ORIGINAL_POLY) $(KECCAK_SOURCES) \
+test/test_NIMS3: test/test_NIMS.c randombytes.c $(KECCAK_SOURCES) \
   $(KECCAK_HEADERS) 
 	$(CC) $(CFLAGS) -DNIMS_TRI_NTT_MODE=3 \
-	  -o $@ $< randombytes.c $(ORIGINAL_POLY) $(KECCAK_SOURCES) 
+	  -o $@ $< randombytes.c $(KECCAK_SOURCES) 
 
-test/test_NIMS5: test/test_NIMS.c randombytes.c $(ORIGINAL_POLY) $(KECCAK_SOURCES) \
+test/test_NIMS5: test/test_NIMS.c randombytes.c $(KECCAK_SOURCES) \
   $(KECCAK_HEADERS) 
 	$(CC) $(CFLAGS) -DNIMS_TRI_NTT_MODE=5 \
-	  -o $@ $< randombytes.c $(ORIGINAL_POLY) $(KECCAK_SOURCES) 
+	  -o $@ $< randombytes.c $(KECCAK_SOURCES)
+
+test/test_NIMS5prime: test/test_NIMS.c randombytes.c $(KECCAK_SOURCES) \
+  $(KECCAK_HEADERS) 
+	$(CC) $(CFLAGS) -DNIMS_TRI_NTT_MODE=55 \
+	  -o $@ $< randombytes.c $(KECCAK_SOURCES) 
 
 test/test_packing1: test/test_packing.c randombytes.c $(KECCAK_SOURCES) \
   $(KECCAK_HEADERS) 
@@ -96,6 +108,11 @@ test/test_packing5: test/test_packing.c randombytes.c $(KECCAK_SOURCES) \
   $(KECCAK_HEADERS) 
 	$(CC) $(CFLAGS) -DNIMS_TRI_NTT_MODE=5 \
 	  -o $@ $< randombytes.c $(KECCAK_SOURCES)
+
+test/test_packing5prime: test/test_packing.c randombytes.c $(KECCAK_SOURCES) \
+  $(KECCAK_HEADERS) 
+	$(CC) $(CFLAGS) -DNIMS_TRI_NTT_MODE=55 \
+	  -o $@ $< randombytes.c $(KECCAK_SOURCES)		
 
 libpqcrystals_fips202_ref.so: fips202.c fips202.h
 	$(CC) -shared -fPIC $(CFLAGS) -o $@ $<
@@ -115,6 +132,10 @@ libpqcrystals_NIMS5_ref.so: $(SOURCES) $(HEADERS) symmetric-shake.c
 	$(CC) -shared -fPIC $(CFLAGS) -DNIMS_TRI_NTT_MODE=5 \
 	  -o $@ $(SOURCES) symmetric-shake.c
 
+libpqcrystals_NIMS5prime_ref.so: $(SOURCES) $(HEADERS) symmetric-shake.c
+	$(CC) -shared -fPIC $(CFLAGS) -DNIMS_TRI_NTT_MODE=55 \
+	  -o $@ $(SOURCES) symmetric-shake.c		
+
 libpqcrystals_NIMS1aes_ref.so: $(SOURCES) $(HEADERS) symmetric-aes.c
 	$(CC) -shared -fPIC $(CFLAGS) -DNIMS_TRI_NTT_MODE=1 -DNIMS_TRI_USE_AES \
 	   -o $@ $(SOURCES) symmetric-aes.c
@@ -126,6 +147,10 @@ libpqcrystals_NIMS3aes_ref.so: $(SOURCES) $(HEADERS) symmetric-aes.c
 libpqcrystals_NIMS5aes_ref.so: $(SOURCES) $(HEADERS) symmetric-aes.c
 	$(CC) -shared -fPIC $(CFLAGS) -DNIMS_TRI_NTT_MODE=5 -DNIMS_TRI_USE_AES \
 	   -o $@ $(SOURCES) symmetric-aes.c
+
+libpqcrystals_NIMS5primeaes_ref.so: $(SOURCES) $(HEADERS) symmetric-aes.c
+	$(CC) -shared -fPIC $(CFLAGS) -DNIMS_TRI_NTT_MODE=55 -DNIMS_TRI_USE_AES \
+	   -o $@ $(SOURCES) symmetric-aes.c		 
 
 test/test_NIMS1aes: test/test_NIMS.c randombytes.c $(AES_SOURCES) \
   $(AES_HEADERS) 
@@ -140,7 +165,12 @@ test/test_NIMS3aes: test/test_NIMS.c randombytes.c $(AES_SOURCES) \
 test/test_NIMS5aes: test/test_NIMS.c randombytes.c $(AES_SOURCES) \
   $(AES_HEADERS) 
 	$(CC) $(CFLAGS) -DNIMS_TRI_NTT_MODE=5 -DNIMS_TRI_USE_AES \
-	  -o $@ $< randombytes.c $(AES_SOURCES) 
+	  -o $@ $< randombytes.c $(AES_SOURCES)
+
+test/test_NIMS5primeaes: test/test_NIMS.c randombytes.c $(AES_SOURCES) \
+  $(AES_HEADERS) 
+	$(CC) $(CFLAGS) -DNIMS_TRI_NTT_MODE=55 -DNIMS_TRI_USE_AES \
+	  -o $@ $< randombytes.c $(AES_SOURCES)		 
 
 test/test_speed1: test/test_speed.c test/speed_print.c test/speed_print.h \
   test/cpucycles.c test/cpucycles.h randombytes.c $(KECCAK_SOURCES) \
@@ -161,7 +191,14 @@ test/test_speed5: test/test_speed.c test/speed_print.c test/speed_print.h \
   $(KECCAK_HEADERS) 
 	$(CC) $(CFLAGS) -DNIMS_TRI_NTT_MODE=5 \
 	  -o $@ $< test/speed_print.c test/cpucycles.c randombytes.c \
-	  $(KECCAK_SOURCES) 
+	  $(KECCAK_SOURCES)
+
+test/test_speed5prime: test/test_speed.c test/speed_print.c test/speed_print.h \
+  test/cpucycles.c test/cpucycles.h randombytes.c $(KECCAK_SOURCES) \
+  $(KECCAK_HEADERS) 
+	$(CC) $(CFLAGS) -DNIMS_TRI_NTT_MODE=55 \
+	  -o $@ $< test/speed_print.c test/cpucycles.c randombytes.c \
+	  $(KECCAK_SOURCES)		 
 
 test/test_speed1aes: test/test_speed.c test/speed_print.c test/speed_print.h \
   test/cpucycles.c test/cpucycles.h randombytes.c $(AES_SOURCES)  $(AES_HEADERS) 
@@ -179,7 +216,13 @@ test/test_speed5aes: test/test_speed.c test/speed_print.c test/speed_print.h \
   test/cpucycles.c test/cpucycles.h randombytes.c $(AES_SOURCES)  $(AES_HEADERS) 
 	$(CC) $(CFLAGS) -DNIMS_TRI_NTT_MODE=5 -DNIMS_TRI_USE_AES \
 	  -o $@ $< test/speed_print.c test/cpucycles.c randombytes.c \
-	  $(AES_SOURCES) 
+	  $(AES_SOURCES)
+
+test/test_speed5primeaes: test/test_speed.c test/speed_print.c test/speed_print.h \
+  test/cpucycles.c test/cpucycles.h randombytes.c $(AES_SOURCES)  $(AES_HEADERS) 
+	$(CC) $(CFLAGS) -DNIMS_TRI_NTT_MODE=55 -DNIMS_TRI_USE_AES \
+	  -o $@ $< test/speed_print.c test/cpucycles.c randombytes.c \
+	  $(AES_SOURCES)		 
 
 test/test_NIMS1_fix: test/test_NIMS_fixinput.c rng.c rng.h $(KECCAK_SOURCES)  \
   $(KECCAK_HEADERS) 
@@ -194,7 +237,12 @@ test/test_NIMS3_fix: test/test_NIMS_fixinput.c rng.c rng.h $(KECCAK_SOURCES)  \
 test/test_NIMS5_fix: test/test_NIMS_fixinput.c rng.c rng.h $(KECCAK_SOURCES)  \
   $(KECCAK_HEADERS) 
 	$(CC) $(CFLAGS) -DNIMS_TRI_NTT_MODE=5 \
-	  -o $@ $< rng.c $(KECCAK_SOURCES) 
+	  -o $@ $< rng.c $(KECCAK_SOURCES)
+
+test/test_NIMS5prime_fix: test/test_NIMS_fixinput.c rng.c rng.h $(KECCAK_SOURCES)  \
+  $(KECCAK_HEADERS) 
+	$(CC) $(CFLAGS) -DNIMS_TRI_NTT_MODE=55 \
+	  -o $@ $< rng.c $(KECCAK_SOURCES)		 
 
 PQCgenKAT_sign1: PQCgenKAT_sign.c rng.c rng.h $(KECCAK_SOURCES) \
   $(KECCAK_HEADERS) 
@@ -211,6 +259,11 @@ PQCgenKAT_sign5: PQCgenKAT_sign.c rng.c rng.h $(KECCAK_SOURCES) \
 	$(CC) $(NISTFLAGS) -DNIMS_TRI_NTT_MODE=5 \
 	  -o $@ $< rng.c $(KECCAK_SOURCES) 
 
+PQCgenKAT_sign5prime: PQCgenKAT_sign.c rng.c rng.h $(KECCAK_SOURCES) \
+  $(KECCAK_HEADERS) 
+	$(CC) $(NISTFLAGS) -DNIMS_TRI_NTT_MODE=55 \
+	  -o $@ $< rng.c $(KECCAK_SOURCES)
+
 PQCgenKAT_sign1aes: PQCgenKAT_sign.c rng.c rng.h $(AES_SOURCES) \
   $(AES_HEADERS) 
 	$(CC) $(NISTFLAGS) -DNIMS_TRI_NTT_MODE=1 -DNIMS_TRI_USE_AES \
@@ -224,59 +277,80 @@ PQCgenKAT_sign3aes: PQCgenKAT_sign.c rng.c rng.h $(AES_SOURCES) \
 PQCgenKAT_sign5aes: PQCgenKAT_sign.c rng.c rng.h $(AES_SOURCES) \
   $(AES_HEADERS) 
 	$(CC) $(NISTFLAGS) -DNIMS_TRI_NTT_MODE=5 -DNIMS_TRI_USE_AES \
-	  -o $@ $< rng.c $(AES_SOURCES) 
+	  -o $@ $< rng.c $(AES_SOURCES)
 
-test/test_timecop1: test/test_timecop.c randombytes.c $(ORIGINAL_POLY) $(KECCAK_SOURCES) \
+PQCgenKAT_sign5primeaes: PQCgenKAT_sign.c rng.c rng.h $(AES_SOURCES) \
+  $(AES_HEADERS) 
+	$(CC) $(NISTFLAGS) -DNIMS_TRI_NTT_MODE=55 -DNIMS_TRI_USE_AES \
+	  -o $@ $< rng.c $(AES_SOURCES)		 
+
+test/test_timecop1: test/test_timecop.c randombytes.c $(KECCAK_SOURCES) \
   $(KECCAK_HEADERS) 
 	$(CC) $(CFLAGS) -DNIMS_TRI_NTT_MODE=1 \
-	  -o $@ $< randombytes.c $(ORIGINAL_POLY) $(KECCAK_SOURCES) 
+	  -o $@ $< randombytes.c $(KECCAK_SOURCES) 
 
-test/test_timecop3: test/test_timecop.c randombytes.c $(ORIGINAL_POLY) $(KECCAK_SOURCES) \
+test/test_timecop3: test/test_timecop.c randombytes.c $(KECCAK_SOURCES) \
   $(KECCAK_HEADERS) 
 	$(CC) $(CFLAGS) -DNIMS_TRI_NTT_MODE=3 \
-	  -o $@ $< randombytes.c $(ORIGINAL_POLY) $(KECCAK_SOURCES) 
+	  -o $@ $< randombytes.c $(KECCAK_SOURCES) 
 
-test/test_timecop5: test/test_timecop.c randombytes.c $(ORIGINAL_POLY) $(KECCAK_SOURCES) \
+test/test_timecop5: test/test_timecop.c randombytes.c $(KECCAK_SOURCES) \
   $(KECCAK_HEADERS) 
 	$(CC) $(CFLAGS) -DNIMS_TRI_NTT_MODE=5 \
-	  -o $@ $< randombytes.c $(ORIGINAL_POLY) $(KECCAK_SOURCES) 
+	  -o $@ $< randombytes.c $(KECCAK_SOURCES)
+
+test/test_timecop5prime: test/test_timecop.c randombytes.c $(KECCAK_SOURCES) \
+  $(KECCAK_HEADERS) 
+	$(CC) $(CFLAGS) -DNIMS_TRI_NTT_MODE=55 \
+	  -o $@ $< randombytes.c $(KECCAK_SOURCES)		 
 
 clean:
 	rm -f *~ test/*~ *.gcno *.gcda *.lcov
 	rm -f libpqcrystals_NIMS1_ref.so
 	rm -f libpqcrystals_NIMS3_ref.so
 	rm -f libpqcrystals_NIMS5_ref.so
+	rm -f libpqcrystals_NIMS5prime_ref.so
 	rm -f libpqcrystals_NIMS1aes_ref.so
 	rm -f libpqcrystals_NIMS3aes_ref.so
 	rm -f libpqcrystals_NIMS5aes_ref.so
+	rm -f libpqcrystals_NIMS5primeaes_ref.so
 	rm -f libpqcrystals_fips202_ref.so
 	rm -f libpqcrystals_aes256ctr_ref.so
 	rm -f test/test_NIMS1
 	rm -f test/test_NIMS3
 	rm -f test/test_NIMS5
+	rm -f test/test_NIMS5prime
 	rm -f test/test_NIMS1aes
 	rm -f test/test_NIMS3aes
 	rm -f test/test_NIMS5aes
+	rm -f test/test_NIMS5primeaes
 	rm -f test/test_speed1
 	rm -f test/test_speed3
 	rm -f test/test_speed5
+	rm -f test/test_speed5prime
 	rm -f test/test_timecop1
 	rm -f test/test_timecop3
 	rm -f test/test_timecop5
+	rm -f test/test_timecop5prime
 	rm -f test/test_speed1aes
 	rm -f test/test_speed3aes
 	rm -f test/test_speed5aes
+	rm -f test/test_speed5primeaes
 	rm -f PQCgenKAT_sign1
 	rm -f PQCgenKAT_sign3
 	rm -f PQCgenKAT_sign5
+	rm -f PQCgenKAT_sign5prime
 	rm -f PQCgenKAT_sign1aes
 	rm -f PQCgenKAT_sign3aes
 	rm -f PQCgenKAT_sign5aes
+	rm -f PQCgenKAT_sign5primeaes
 	rm -f test/test_NIMS1_fix
 	rm -f test/test_NIMS3_fix
 	rm -f test/test_NIMS5_fix
+	rm -f test/test_NIMS5prime_fix
 	rm -f test/test_packing1
 	rm -f test/test_packing3
 	rm -f test/test_packing5
+	rm -f test/test_packing5prime
 	rm -f *.rsp
 	rm -f *.req
